--- a/sass/landing-page.scss
+++ b/sass/landing-page.scss
@@ -1,2 +1,12 @@
 @import "var/global";
 @import "var/mixins";
+
+@import "modules/header";
+@import "modules/icon-listing";
+@import "modules/listing";
+
+.webinar {
+	&__container {
+		@include container;
+	}
+}
