--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -1,6 +1,6 @@
 .header {
 	border-top:10px solid $teal;
-	padding:105px 0 150px;
+	padding:10vh 0 15vh;
 	background: {
 		size:cover;
 		position:50%;
@@ -11,7 +11,7 @@
 		text-align:center;
 	}
 	&__logo {
-		padding-bottom:90px;
+		padding-bottom:5vh;
 	}
 	&__text {
 		margin:0 auto;
