--- a/sass/modules/_listing.scss
+++ b/sass/modules/_listing.scss
@@ -8,6 +8,9 @@
 		background: -webkit-linear-gradient(top, rgba(240,240,240,1) 0%,rgba(255,255,255,0.81) 100%); /* Chrome10-25,Safari5.1-6 */
 		background: linear-gradient(to bottom, rgba(240,240,240,1) 0%,rgba(255,255,255,0.81) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f0f0', endColorstr='#cfffffff',GradientType=0 ); /* IE6-9 */
+		@media(max-width:768px) {
+			padding:30px 50px 60px;
+		}
 		&:nth-child(1) {
 			&:before {
 				content:none;
@@ -23,6 +26,14 @@
 		    background: #333333;
 		    transform:translateX(-50%);
 		}
+		&--soon {
+			.listing__speakers {
+				@media(max-width:992px) {
+					display:none;
+					margin:0;
+				}
+			}
+		}
 	}
 	&__soon {
 		position:absolute;
@@ -31,13 +42,29 @@
 		top:0;
 		left:0;
 		z-index:1;
-		background:rgba($text,0.9);
+		background:rgba($black,0.9);
 		text-align:center;
 		display:flex;
 		align-items:center;
 		justify-content:center;
 		.soon__container {
-			@include container(860px);
+			@include container(580px);
+			img {
+				display:inline-block;
+				margin:0 0 25px;
+			}
+			p {
+				strong {
+					text-transform:uppercase;
+					color:$teal;
+				}
+				margin:0 0 30px;
+				color:$white;
+			}
+			h2 {
+				color:$white;
+				margin:0 0 20px;
+			}
 		}
 	}
 	&__inner {
@@ -46,6 +73,9 @@
 	}
 	&__content {
 		flex:0 0 70%;
+		@media(max-width:992px) {
+			flex:0 0 100%;
+		}
 		.content {
 			&__topic {
 				padding-bottom:20px;
@@ -60,6 +90,10 @@
 			&__inner {
 				width:100%;
 				padding-right:60px;
+				@media(max-width:992px) {
+					padding:0;
+					text-align:center;
+				}
 			}
 			&__image {
 				background-size:cover;
@@ -70,10 +104,17 @@
 				margin-bottom:25px;
 			}
 			&__text {
+				padding-right:80px;
+				box-sizing:border-box;
+				@media(max-width:992px) {
+					padding:0;
+				}
 				p {
 					margin:0 0 30px;
+					color:$text;
 				}
 				h2 {
+					color:$teal;
 					margin:0 0 20px;
 				}
 			}
@@ -81,5 +122,57 @@
 	}
 	&__speakers {
 		flex:0 0 30%;
+		@media(max-width:992px) {
+			margin-top:50px;
+			flex:0 0 100%;
+			display:flex;
+			flex-flow:row wrap;
+			justify-content: space-around;
+		}
+		h2 {
+			color:$teal;
+			margin:0 0 32px;
+			@media(max-width:992px) {
+				display:none;
+				margin:0;
+			}
+		}
+		.speakers__item {
+			@media(max-width:992px) {
+				flex: 0 0 270px;
+    			text-align: center;
+			}
+			@media(max-width:768px) {
+				flex:0 0 100%;
+				margin-bottom:30px;
+				&:last-child {
+					margin-bottom:0;
+				}
+			}
+			@media(min-width:992px) {
+				&:nth-child(2) {
+					margin:0;
+				}
+				margin-top:42px;
+			}
+			img {
+				margin:0 0 18px;
+			}
+			h3 {
+				color:$teal;
+				margin:0;
+				font-size:1.25rem;
+				font-weight:700;
+				line-height:1.2em;
+				width:100%;
+				@media(max-width:600px) {
+					font-size:1.125rem;
+				}
+			}
+			p {
+				width:100%;
+				margin:0;
+			}
+		}
 	}
 }
