--- a/sass/var/_global.scss
+++ b/sass/var/_global.scss
@@ -100,26 +100,16 @@ blockquote {
   }
 }
 .button {
-  font-family:$helvetica;
-  font-weight:700;
-  font-size:1.5rem;
-  line-height:1.2em;
-  text-align:center;
-  display:inline-block;
-  transition:all 0.25s ease;    
-  max-width:100%;
-  padding: 24px 81px 23px 2em;
-  border-radius: 90px;
+  background: rgba($teal,1);
+  display: inline-block;
+  padding: 17px 2rem;
+  text-align: center;
   color:$white;
-  text-transform:uppercase;
-  text-decoration:none;
-  cursor: pointer;
-  line-height: 1em;
-  background-color: $teal;
-  border:0;
-  transition: all .2s ease-in-out;
-  position:relative;
-  margin:0;
+  font-size:1.5rem;
+  font-family:$helvetica;
+  font-weight: 700;
+  text-decoration: none;
+  transition: all 0.3s;
   @media(max-width:600px) {
     font-size:1rem;
   }
